Se elimina schema y se crear producto id autogenerated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 #Para ejecutar el script y data.sql
     #Esto sirve para que pille mis scripts
 spring.jpa.defer-datasource-initialization=true
-    #Accede a schema.sql para crear la tabla
+    #Accede a schema para crear la tabla
 spring.jpa.hibernate.ddl-auto=create
     #Para que reconozca mysql como BBDD.Esta línea no hace falta si usamos H2 como BDD
 spring.sql.init.mode=always
